Update README.md
Pasos para generar la documentacion